--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/core": "^8.0.0",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/vite": "^4.1.18",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
